# orven

./: .gitignore  .graphifyignore  README.md  pyproject.toml
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
issues/: 001-fix-cli-invocation-docs-and-command-shape.md  002-add-cli-smoke-tests.md  003-introduce-explicit-root-cli-and-subcommands.md  004-add-typed-local-configuration-loading.md  005-implement-provider-abstraction-and-ollama-backend.md  006-add-skill-and-workflow-discovery.md  README.md
src/orven/: main.py
src/orven/cli/: __init__.py  app.py  shell.py  tracing.py
src/orven/cli/commands/: config.py  doctor.py  general.py  model.py  providers.py  skills.py  workflows.py
src/orven/config/: __init__.py  settings.py
src/orven/core/: __init__.py  agent.py  conversation.py  skills.py  trace.py
src/orven/core/tools/: __init__.py  base.py  filesystem.py  registry.py  skills.py
src/orven/providers/: __init__.py  base.py  factory.py  ollama.py
tests/: test_agent.py  test_cli.py  test_config.py  test_core.py  test_filesystem_tools.py  test_providers.py  test_skills.py
